# PDE_BD

./: CMakeLists.txt  README.md
python/: CMakeLists.txt  python.cpp
src/: CMakeLists.txt  Constants.h  Io.cpp  Io.h  Molecules.cpp  Molecules.h  MoleculesSimple.cpp  MoleculesSimple.h  MyMpi.cpp  MyMpi.h  Pde.cpp  Pde.h  Pde2.cpp  Pde2.h  PdeMoleculesCoupling.cpp  PdeMoleculesCoupling.h  Pde_bd.h  Species.cpp  Species.h  TrilinosRD.cpp  TrilinosRD.hpp  TrilinosSolve.cpp  TrilinosSolve.h  python.cpp
tests/: CMakeLists.txt  molecules.py  pde_integrate.py  test_init.cpp  test_pde_constructor.cpp  test_pde_integrate.cpp  test_pde_mol.cpp  test_pde_mol2.cpp  test_pde_mol3.cpp
