
LINK_DIRECTORIES(${pde_bd_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(${pde_bd_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${MPI_CXX_INCLUDE_PATH} ${Trilinos_INCLUDE_DIRS} ${Trilinos_TPL_INCLUDE_DIRS})
PYTHON_ADD_MODULE(pypdb python.cpp)

TARGET_LINK_LIBRARIES(pypdb pdb ${Boost_LIBRARIES})
