file(GLOB pde_bd_SOURCES "*.cpp")
INCLUDE_DIRECTORIES(${pde_bd_SOURCE_DIR}/src ${MPI_CXX_INCLUDE_PATH} ${Trilinos_INCLUDE_DIRS} ${Trilinos_TPL_INCLUDE_DIRS})
LINK_DIRECTORIES(${Trilinos_LIBRARY_DIRS} ${Trilinos_TPL_LIBRARY_DIRS})
add_library(pdb SHARED ${pde_bd_SOURCES})
TARGET_LINK_LIBRARIES(pdb ${MPI_CXX_LIBRARIES} ${Trilinos_LIBRARIES} ${Trilinos_TPL_LIBRARIES})
